# poc-rust-wasm-nodejs

./: Cargo.toml  README.md  main.mts  run.sh
ffi-wasm/: Cargo.toml
ffi-wasm/src/: lib.rs
native-app/: Cargo.toml
native-app/src/: main.rs
