[workspace]
resolver = "3"
members  = [
  "ffi-wasm",
  "native-app",
]

[workspace.dependencies]
chrono       = { version = "=0.4.41",  default-features = false }
serde_json   = { version = "=1.0.141", default-features = false }
serde        = { version = "=1.0.219", default-features = false }
tokio        = { version = "=1.47.0",  default-features = false }
wasm-bindgen = { version = "=0.2.100", default-features = false }
